Working on notebook

--- a/Task_4_1/PBVS+IBVS+ROS_VSM&JGB.ipynb
+++ b/Task_4_1/PBVS+IBVS+ROS_VSM&JGB.ipynb
@@ -1,10 +1,63 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 29,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# PBVS & IBVS ROS Integration\n",
+    "**Authors**:\n",
+    "<span style=\"color: red;\">Javier González Barreda</span> &\n",
+    "<span style=\"color: red;\">Vicent Santamarta Martinez</span>\n",
+    "<br/><br/>\n",
+    "**ROS Version:** ROS 2 Humble"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO:\n",
+    "- Explicar els nodos (que s'ha fet?)\n",
+    "- Explicar els launchers\n",
+    "- Comparar visualitzacions dels originals i el de ROS.\n",
+    "- Conlusions?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PBVS Development"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this exercise we had to integrate our implementation of the Position Based Visual Servoing (PBVS) with the ROS communication.<br/>\n",
+    "Our implementation consists of three Nodes:\n",
+    "- [Feature Extractor](ros2_ws/src/pbvs/pbvs/feature_extractor.py)\n",
+    "- [Controller](ros2_ws/src/pbvs/pbvs/controller.py)\n",
+    "- [Actuator](ros2_ws/src/pbvs/pbvs/actuator.py)\n",
+    "\n",
+    "The behavior of all three nodes is based on the modules developed fot the [Task 2.3 PBVS](Tasks_2.3_2.4/VSM_PBVS.py)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "from machinevisiontoolbox.base import *\n",
     "from machinevisiontoolbox import *\n",
@@ -14,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,24 +80,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PBVS + ROS Visualization"
+    "## PBVS + ROS Visualization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load histories\n",
-    "uv = np.load('PBVS/uv_history.npy')\n",
-    "c_pose = np.load('PBVS/c_pose_history.npy')\n",
-    "vel = np.load('PBVS/vel_history.npy')"
+    "uv = np.load('outputs/PBVS/uv_history.npy')\n",
+    "c_pose = np.load('outputs/PBVS/c_pose_history.npy')\n",
+    "vel = np.load('outputs/PBVS/vel_history.npy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,8 +161,8 @@
     "    plt.show()\n",
     "\n",
     "# Assuming uv_history, camera_pose_history, and T_delta_history are given with appropriate shapes\n",
-    "camera_width = 640  # example value, set according to your camera specifications\n",
-    "camera_height = 480  # example value, set according to your camera specifications\n"
+    "camera_width = 640 \n",
+    "camera_height = 480\n"
    ]
   },
   {
@@ -267,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IBVS + ROS Visualizations"
+    "## IBVS + ROS Visualizations"
    ]
   },
   {
@@ -343,18 +396,15 @@
     "    plt.grid(True)\n",
     "    plt.xlabel(\"u (pixels)\")\n",
     "    plt.ylabel(\"v (pixels)\")\n",
-    "    plt.xlim(0, 1000)  # Adjust based on your camera's resolution\n",
-    "    plt.ylim(0, 1000)  # Adjust based on your camera's resolution\n",
+    "    plt.xlim(0, 1000)\n",
+    "    plt.ylim(0, 1000) \n",
     "    plt.legend()\n",
     "    ax = plt.gca()\n",
     "    ax.invert_yaxis()\n",
     "    ax.set_aspect(\"equal\")\n",
     "    ax.set_facecolor(\"lightyellow\")\n",
     "    plt.title(\"Feature Trajectory from Simulation\")\n",
-    "    plt.show()\n",
-    "\n",
-    "# Example usage:\n",
-    "# plot_feature_trajectory(uv_history, c_pose_history, vel_history)"
+    "    plt.show()"
    ]
   },
   {
